# PI4-Backend

./: .env.example  .gitignore  README.md  dev.db  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: database.py  main.py
app/core/: config.py  dependencies.py  security.py
app/models/: __init__.py  auth.py  payments.py  statements.py
app/routers/: auth.py  categories.py  dashboard.py  health.py  statements.py  transactions.py
app/schemas/: auth.py  categories.py  common.py  dashboard.py  payments.py  statements.py  transactions.py
app/services/: dashboard.py  gemini.py
app/workers/: celery_app.py  tasks.py
docs/superpowers/plans/: 2026-04-05-auth.md  2026-04-05-dashboard-financeiro.md  2026-04-05-foundation.md  2026-04-05-pdf-pipeline.md  2026-04-19-railway-deploy-fixes.md
docs/superpowers/specs/: 2026-04-05-auth-design.md  2026-04-05-dashboard-financeiro-design.md  2026-04-05-foundation-design.md  2026-04-05-pdf-pipeline-design.md  2026-04-19-railway-deploy-fixes-design.md
tests/: conftest.py  test_auth.py  test_categories.py  test_dashboard.py  test_health.py  test_statements.py  test_transactions.py
