[project]
name = "camelbox-backend"
version = "0.1.0"
description = "Backend API for Camelbox - Financial Analysis SaaS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "google-generativeai>=0.5.0",
    "python-multipart>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.pytest.ini_options]
testpaths = ["tests"]
